--- a/CKLDrawing/CKLDrawing.csproj
+++ b/CKLDrawing/CKLDrawing.csproj
@@ -16,9 +16,16 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Costura.Fody" Version="5.7.0">
+      <PackageReference Include="Costura.Fody" Version="6.0.0">
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         <PrivateAssets>all</PrivateAssets>
+      </PackageReference>
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+      <PackageReference Include="System.Text.Json" Version="10.0.0-preview.3.25171.5" />
+      <PackageReference Include="xunit" Version="2.9.3" />
+      <PackageReference Include="xunit.runner.visualstudio" Version="3.0.2">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
     </ItemGroup>
 
