--- a/CKLDrawing/CKLDrawing.csproj
+++ b/CKLDrawing/CKLDrawing.csproj
@@ -17,10 +17,9 @@
 
     <ItemGroup>
       <PackageReference Include="Costura.Fody" Version="6.0.0">
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         <PrivateAssets>all</PrivateAssets>
       </PackageReference>
-      <PackageReference Include="System.Text.Json" Version="10.0.0-preview.3.25171.5" />
+      <PackageReference Include="System.Text.Json" Version="9.0.6" />
     </ItemGroup>
 
 	<PropertyGroup>
