--- a/CKLLib/CKLLib.csproj
+++ b/CKLLib/CKLLib.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
 		<IsPackable>true</IsPackable>
 		<PackageId>CKLLib</PackageId>
-		<Version>1.1.01</Version>
+		<Version>1.1.2</Version>
 		<Authors>hanami-05</Authors>
 		<Description>
 			С# library for building and interacting with dynamic relationships.
@@ -12,6 +12,7 @@
 			Contains operations of the algebra of dynamic relations, as well as the necessary components for working with relations
 		</Description>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageReadmeFile>DOCUMENTATION.md</PackageReadmeFile>
 		<PackageTags>library, csharp, dynamic relations, planning problems, resource allocation</PackageTags>
 		<RepositoryUrl>https://github.com/hanami-05/CKLLib-1.1/tree/dev/CKLLib/DOCUMENTATION.md</RepositoryUrl>
 		<ImplicitUsings>enable</ImplicitUsings>
